# shocks

./: .gitignore  README.md  data.dvc  data.ipynb  data_processing.ipynb  lobster_extraction.py  lobster_util.ipynb  notebook.ipynb  playground.ipynb  pyproject.toml  setup.sh
.dvc/: config
shocks/: __init__.py  _dataset.py  dataset.py  datset_main.py  main.py  utils.py
shocks/dataset/: __init__.py  base_dataset.py  features.py  lobster_dataset.py
shocks/lobster_utils/: __init__.py  lobster_util.py  utils.py
tests/: test_shocks.py
