[tool.poetry]
name = "shocks"
version = "0.1.0"
description = ""
authors = ["EmaMerca <mercanti.emanuele.96@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
ipykernel = "^6.13.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
dvc = {extras = ["s3"], version = "^2.10.2"}
pystable = "^0.2.3"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
