[tool.poetry]
name = "shocks"
version = "0.1.0"
description = ""
authors = ["EmaMerca <mercanti.emanuele.96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
matplotlib = "^3.5.1"
ipykernel = "^6.13.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
dvc = {extras = ["s3"], version = "^2.10.2"}
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
cotyledon = "^1.7.3"
bs4 = "^0.0.1"
libarchive = "^0.4.7"
Cython = "^0.29.32"
pandas = "^1.4.3"
llvmlite = "^0.39.0"
numpy = "1.22.3"
numba = "^0.56.0"
tsfresh = "^0.19.0"
lxml = "^4.9.1"
pystable = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
